2012-11-17  Simson Garfinkel  <simsong@npsair.local>

	* src/tcpflow.cpp (usage): usage now goes to stdout and not stderr.

2012-11-15  Simson Garfinkel  <simsong@npsair.local>

	* src/tcpdemux.h (class tcpdemux): retrying_open now takes a std:;string

2012-11-14  Simson Garfinkel  <simsong@npsair.local>

	* src/tcpip.cpp (tcpip::store_packet): added bytes_processed addition so that <fileobject> <filesize> is properly updated.

	* src/be13_api/bulk_extractor_i.h: renamed histograms to be feature_histograms

	* src/plugin.cpp (process_sbuf): renamed process_extract to process_sbuf and put it here.

2012-11-06  Simson Garfinkel  <simsong@mncrnpsedu.local>
 
 	* src/tcpdemux.cpp (tcpdemux::process_tcp): first packet sense was inverted. Fixed.
 	
	* src/main.cpp (main): renamed main.cpp to tcpflow.cpp

2012-11-05  Simson Garfinkel  <simsong@npsair.local>

	* src/main.cpp (main): print_usage() renamed usage() for consistency with bulk_extractor
	(usage): usage made static

2012-10-28  Simson Garfinkel  <simsong@npsair.local>

	* src/pcb_timehistogram.cpp: made histograms static

	* src/tcpip.cpp (tcpip::store_packet): debug_level changed to debug in all files.

2012-10-26  Simson Garfinkel  <simsong@npsair.local>

	* src/flow.cpp (flow::print_usage): shortened filename template usage.

	* src/tcpip.cpp (insert): added this function to insert a space at the beginning of a file. Now tcpflow can handle a flow with missing SYNs and out-of-order packets.

2012-10-25  Simson Garfinkel  <simsong@npsair.local>

	* src/tcpip.cpp (tcpip::print_packet): implemented strip-on-fputc

	* src/tcpdemux.cpp (do_strip_nonprint): removed this function, as it could be replaced with strip-on-fputc

2012-10-24  Simson Garfinkel  <simsong@npsair.local>

	* src/tcpdemux.cpp (tcpdemux::open_tcpfile): now asserts that file is not open
	(tcpdemux::open_tcpfile): retrying_fopen changed to retrying_open
	(tcpdemux::process_tcp): completely rewrote the TCP implementation
	(tcpdemux::process_ip4): 
