@@ -1,3 +1,7 @@
+2012-12-07  Simson Garfinkel  <simsong@Mucha.local>
+
+	* src/tcpdemux.h (class flow_addr): fixed operator< type 
+
 2012-11-17  Simson Garfinkel  <simsong@npsair.local>
 
 	* src/tcpflow.cpp (usage): usage now goes to stdout and not stderr.
